--- a/about.html
+++ b/about.html
@@ -16,23 +16,28 @@
 
 <body class="bg-black">
     <div class="container md:max-w-8xl md:mx-auto">
-        <header class="fixed bg-black top-0 w-full md:w-0">
-            <nav class="p-5 flex justify-between items-center">
-                <div class="flex items-center">
+        <header class="bg-black">
+            <nav class="p-5 flex justify-between items-center w-full relative bg-transparent">
+                <div class="flex items-center z-1001">
                     <a href="index.html" class="flex items-center gap-3">
-                        <img src="src/img/logo.png" alt="logo" class="w-10 h-10 invert-100">
+                        <img src="src/img/logo.png" alt="logo" class="w-10 h-10 invert">
                         <p class="text-white font-bebas uppercase text-2xl">Bhavesh Suthar</p>
                     </a>
                 </div>
-                <div class="block md:hidden menu z-99999" onclick="togglemenu()">
-                    <img src="/src/img/menu.png" alt="menu" class="size-7 filter invert menuOpen">
+
+                <div class="xl:hidden z-1001 cursor-pointer" onclick="togglemenu()">
+                    <img src="src/img/menu.png" id="menuIcon" class="w-8 h-8 invert transition-all duration-300">
                 </div>
-                <div id="mobile-nav" class="mobile-nav hidden md:flex">
-                    <ul class="flex items-center gap-8 md:gap-10 flex-col mt-31 w-full h-full md:mt-0 md:flex-row">
-                        <li><a href="#work" class="text-white text-2xl md:text-xl">Work</a></li>
-                        <li><a href="about.html" class="text-white text-2xl md:text-xl">About</a>
+
+                <div id="navMenu" class="mobile-nav fixed xl:relative top-0 left-0 w-full xl:w-auto h-[60vh] xl:h-auto bg-black xl:bg-transparent z-999 
+        -translate-y-full xl:translate-y-0 transition-transform duration-500 ease-in-out 
+        flex flex-col xl:flex-row items-center justify-center xl:block">
+
+                    <ul class="flex flex-col xl:flex-row gap-8 xl:gap-10 items-center">
+                        <li><a href="#work" class="text-white text-2xl xl:text-lg hover:text-gray-400">Work</a></li>
+                        <li><a href="about.html" class="text-white text-2xl xl:text-lg hover:text-gray-400">About</a>
                         </li>
-                        <li><a href="#contactME" class="text-white text-2xl md:text-xl">Contact</a>
+                        <li><a href="#contactME" class="text-white text-2xl xl:text-lg hover:text-gray-400">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -42,13 +47,14 @@
     </div>
     <div class="container md:max-w-8xl md:mx-auto">
         <section class="about-me mt-34">
-            <div class="about-me-content max-w-7xl mx-auto md:flex md:justify-between gap-8 p-6 md:items-center">
+            <div
+                class="about-me-content max-w-7xl mx-auto flex md:mt-34 mt-7 gap-4 p-6 lg:flex-row flex-col lg:items-center md:justify-between">
                 <div class=" about-heading flex mb-5">
                     <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light w-52 text-white">
                         About Me
                     </h2>
                 </div>
-                <div class="about-para md:flex md:flex-col gap-13 w-full md:gap-0 md:w-181">
+                <div class="about-para md:flex md:flex-col gap-13 w-full md:gap-0 md:w-160">
                     <h4 class="text-2xl mb-5 text-white">I am a Frontend Developer based in india. Has Information
                         Technology
                         Background</h4>
@@ -63,7 +69,7 @@
 
                     <div class="flex w-full gap-4 items-center mt-6">
                         <a href="src/Document/Bhavesh Resume.pdf" download="resume-bhavesh.pdf"
-                            class="text-black font-medium bg-[#D3E97A] w-50.5 p-2 h-12 rounded-3xl flex items-center gap-3">Download
+                            class="text-black font-medium bg-[#D3E97A] w-50.5 p-2 h-12 rounded-3xl flex items-center gap-3 text-[13px] justify-around">Download
                             Resume <i
                                 class="fa-solid fa-download text-2xl text-black p-2 rounded-full flex justify-center items-center"></i></a>
 
@@ -82,19 +88,30 @@
     <div class="container md:max-w-8xl md:mx-auto">
         <section class="about-me mt-15">
             <div
-                class="about-me-content max-w-7xl mx-auto md:flex block flex-col md:flex-row p-6 text-white md:gap-64.25 md:justify-between gap-9">
+                class="about-me-content max-w-7xl mx-auto flex md:mt-34 mt-7 gap-4 p-6 lg:flex-row flex-col lg:items-center md:justify-between">
                 <div class="about-heading flex mb-5">
-                    <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light w-70">
-                        My Capabilities
+                    <h2 class="md:text-5xl text-5xl uppercase font-bebas tracking-wider font-light w-70 text-white">
+                        Technical skill
                     </h2>
                 </div>
-                <div class="about-para md:flex md:flex-col gap-13.25 sm:mt-4">
+                <div class="about-para md:flex md:flex-col gap-13 sm:mt-4 md:w-160">
                     <p class="text-gray-400 mb-5">I'm always learning and pushing myself toward new achievements.
                         Keeping up with the latest technology gives me the freedom to adapt and keeps my skills sharp.
                     </p>
 
-                    <div class="flex w-full gap-4 items-center">
-
+                    <div class="flex w-full gap-4 items-center text-white flex-wrap">
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-22">HTML</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-22">CSS</span>
+                        <span
+                            class="border py-2 px-7 rounded-4xl flex justify-center items-center w-40">JAVASCRIPT</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-25">FIGMA</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-25">GITHUB</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-25">GIT</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-42">TAILWIND
+                            CSS</span>
+                        <span
+                            class="border py-2 px-7 rounded-4xl flex justify-center items-center w-35">BOOTSTRAP</span>
+                        <span class="border py-2 px-7 rounded-4xl flex justify-center items-center w-32">REST API</span>
                     </div>
                 </div>
             </div>
@@ -103,11 +120,47 @@
     <hr class="text-[#343a40] mt-20 mb-20">
 
     <div class="container md:max-w-8xl md:mx-auto" id="contactme">
+        <section class="myexp">
+            <div
+                class="my-exp max-w-7xl mx-auto md:flex lg:flex-row flex-col md:mt-34 mt-7 flex gap-4 md:justify-between p-6 text-left md:items-start lg:items-center lg:gap-40 md:g-40">
+                <div class="exp-heading flex gap-10 flex-col">
+                    <h2
+                        class="md:text-5xl text-5xl uppercase font-bebas tracking-wider font-light w-80 text-white sm:text-left">
+                        my experience
+                    </h2>
+                    <div class="social-link flex items-start gap-2 flex-col">
+                        <div class="designation-&-year flex md:justify-between md:items-center w-full flex-col">
+                            <h3 class="text-white text-xl">Freelance Web Developer</h3>
+                            <p class="text-sm text-[#C7C7C7]">August 2024 - Present</p>
+                            <ol class="text-white">
+                                <li>Design and develop responsive user interfaces for websites.</li>
+                                <li>Build and optimize frontend components using HTML, CSS, JavaScript, and modern
+                                    frameworks</li>
+                                <li>Ensure cross-browser compatibility, performance, and smooth user experience.</li>
+                                <li>Integrate APIs and dynamic data in collaboration with backend developers.</li>
+                                <li>Identify and fix UI bugs, improve usability.</li>
+                            </ol>
+                        </div>
+                        <div class="designation-&-year">
+                            <h3 class="text-white text-xl font-light">Frontende Developer Intern <br> <span
+                                    class="text-sm">Capritech Global Services
+                                    (CTGS)</span></h3>
+                            <p class="text-sm text-[#C7C7C7]">March 2024 - June 2024</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </div>
+    <hr class="text-[#343a40] mt-20 mb-20">
+    <div class="container md:max-w-8xl md:mx-auto" id="contactme">
         <section class="contact-form">
             <div
-                class="form-content max-w-7xl mx-auto md:flex flex-col p-6 text-white md:gap-8 md:justify-between gap-9">
+                class="form-content max-w-7xl mx-auto md:flex lg:flex-row flex-col md:mt-34 mt-7 flex gap-4 md:justify-between p-6 text-left md:items-start lg:items-center lg:gap-40 md:g-40">
                 <div class="about-heading flex gap-10 flex-col">
-                    <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light w-80">
+                    <h2
+                        class="md:text-5xl text-5xl uppercase font-bebas tracking-wider font-light w-80 text-white sm:text-left">
                         Let's Connect
                     </h2>
                     <div class="social-link flex items-center gap-2">
@@ -121,31 +174,31 @@
                                 class="fa-brands fa-instagram text-[#D3E97A] text-2xl"></i></a>
                     </div>
                 </div>
-                <div class="main-form md:flex md:flex-col gap-13 md:mt-14">
-                    <form action="#" method="get" class="md:w-full w-full">
-                        <div class="contactFields flex flex-col mb-6 gap-2 w-full">
+                <div class="main-form mt-14 w-full lg:mt-0">
+                    <form action="#" method="get" class="w-full text-white">
+                        <div class="contactFields flex flex-col mb-6 gap-2">
                             <label for="fullname" class="text-gray-200 font-light">Full Name</label>
                             <input type="text" placeholder="john Doe" name="fullname" id="fullname"
-                                class="bg-[#1A1A1A] p-3 outline-0 rounded-l-lg" required>
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-lg placeholder:text-gray-600" required>
                         </div>
 
                         <div class="contactFields flex flex-col mb-6 gap-2">
                             <label for="email" class="text-gray-200 font-light">Email</label>
                             <input type="email" placeholder="example@gmail.com" name="email" id="email"
-                                class="bg-[#1A1A1A] p-3 outline-0 rounded-l-lg" required>
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-lg placeholder:text-gray-600" required>
                         </div>
 
                         <div class="contactFields flex flex-col mb-6 gap-2">
                             <label for="subject" class="text-gray-200 font-light">Subject</label>
                             <input type="text" placeholder="Message Subject" name="subject" id="subject"
-                                class="bg-[#1A1A1A] p-3 outline-0 rounded-lg" required>
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-lg placeholder:text-gray-600" required>
                         </div>
 
                         <div class="contactFields flex flex-col mb-6 gap-2">
                             <label for="message" class="text-gray-200 font-light">Message</label>
                             <textarea name="message" id="message" cols="30" rows="10"
-                                class="bg-[#1A1A1A] p-3 outline-0 rounded-l-lg" placeholder="Type here your Message..."
-                                required></textarea>
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-l-lg placeholder:text-gray-600"
+                                placeholder="Type here your Message..." required></textarea>
                         </div>
 
                         <button type="submit"
