--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head class="md:overflow-x-hidden md:relative overflow-x-hidden relative">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -13,34 +13,39 @@
     <title>Bhavesh Suthar | Frontend Developer | Building Accessible & User-Friendly Websites</title>
 </head>
 
-<body class="bg-black md:overflow-x-hidden md:relative overflow-x-hidden relative">
-    <div class="container w-full md:mx-auto overflow-hidden">
-        <header class="fixed bg-black top-0 w-full md:w-0">
-            <nav class="p-5 flex justify-between items-center">
-                <div class="flex items-center">
+<body class="bg-black">
+    <div class="container w-full md:mx-auto">
+        <header class="bg-black">
+            <nav class="p-5 flex justify-between items-center w-full relative bg-transparent">
+                <div class="flex items-center z-1001">
                     <a href="index.html" class="flex items-center gap-3">
-                        <img src="src/img/logo.png" alt="logo" class="w-10 h-10 invert-100">
+                        <img src="src/img/logo.png" alt="logo" class="w-10 h-10 invert">
                         <p class="text-white font-bebas uppercase text-2xl">Bhavesh Suthar</p>
                     </a>
                 </div>
-                <div class="block md:hidden menu z-99999" onclick="togglemenu()">
-                    <img src="/src/img/menu.png" alt="menu" class="size-7 filter invert menuOpen">
+
+                <div class="xl:hidden z-99999 cursor-pointer" onclick="togglemenu()">
+                    <img src="src/img/menu.png" id="menuIcon" class="w-8 h-8 invert transition-all duration-300">
                 </div>
-                <div id="mobile-nav" class="mobile-nav hidden md:flex">
-                    <ul class="flex items-center gap-8 md:gap-10 flex-col mt-31 w-full h-full md:mt-0 md:flex-row">
-                        <li><a href="#work" class="text-white text-2xl md:text-xl">Work</a></li>
-                        <li><a href="about.html" class="text-white text-2xl md:text-xl">About</a>
+
+                <div id="navMenu" class="mobile-nav absolute xl:relative top-0 left-0 w-full xl:w-auto h-[60vh] xl:h-auto bg-black xl:bg-transparent z-9999 
+        -translate-y-full xl:translate-y-0 transition-transform duration-500 ease-in-out 
+        flex flex-col xl:flex-row items-center justify-center xl:block">
+
+                    <ul class="flex flex-col xl:flex-row gap-8 xl:gap-10 items-center">
+                        <li><a href="#work" class="text-white text-2xl xl:text-lg hover:text-gray-400">Work</a></li>
+                        <li><a href="about.html" class="text-white text-2xl xl:text-lg hover:text-gray-400">About</a>
                         </li>
-                        <li><a href="#contactME" class="text-white text-2xl md:text-xl">Contact</a>
+                        <li><a href="#contactME" class="text-white text-2xl xl:text-lg hover:text-gray-400">Contact</a>
                         </li>
                     </ul>
                 </div>
             </nav>
         </header>
         <section class="w-full">
-            <div class="max-w-7xl mx-auto items-center md:flex flex-col md:flex-row md:mt-34 mt-20">
-
-                <div class="flex-1 md:text-left space-y-6 p-6">
+            <div
+                class="flex justify-center md:mt-34 items-center mx-auto max-w-7xl flex-col md:flex-row p-6 m-20 gap-9">
+                <div class="flex-1 md:text-left">
                     <h1 class="text-white text-5xl md:text-[55px] font-bebas uppercase leading-tight">
                         Hi, i am <br>Bhavesh Suthar.
                     </h1>
@@ -48,7 +53,7 @@
                         I am a Frontend Developer focused on building accessible, responsive,
                         and user-friendly websites with clean code and modern UI Design.
                     </p>
-                    <div class="flex items-center justify-center md:justify-start gap-4">
+                    <div class="flex items-center justify-center md:justify-start gap-4 mt-9">
                         <a href="#contactME"
                             class="bg-[#D3E97A] px-6 py-3 rounded-full uppercase text-black font-bold text-sm">
                             Contact Me
@@ -60,21 +65,20 @@
                     </div>
                 </div>
 
-                <div class="flex justify-center md:justify-end mx-6">
+                <div class="flex justify-center md:justify-end">
                     <div class="bg-[#edf6f9] w-72 h-80 md:w-84 md:h-90 rounded-2xl overflow-hidden shadow-2xl">
                         <img src="src/img/Bhavesh Pic.png" class="w-full h-full object-cover" alt="Bhavesh Pic">
                     </div>
                 </div>
-
             </div>
         </section>
     </div>
-    <hr class="text-[#343a40] mt-20 mb-20">
+    <hr class="text-[#343a40] mt-20 mb-20 w-full">
     <div class="container md:max-w-8xl md:mx-auto" id="work">
         <section class="text-white" id="project w-full">
-            <div class="max-w-7xl mx-auto items-center md:block flex flex-col md:flex-row">
-                <div class="p-6">
-                    <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light">
+            <div class="max-w-7xl mx-auto items-center md:flex-col flex flex-col md:flex md:p-6 md:items-start">
+                <div class="p-6 md:p-0">
+                    <h2 class="md:text-5xl text-5xl uppercase font-bebas tracking-wider font-light">
                         My Projects
                     </h2>
                     <p class="mt-4 text-gray-400 max-w-xl md:text-[14px]">
@@ -83,8 +87,8 @@
                 </div>
 
                 <!-- Project card -->
-                <div class="mt-20 md:flex md:flex-col md:gap-30 md:p-6 flex flex-col gap-5">
-                    <div class="project-cards block justify-between gap-12 items-center bg-[#1A1A1A] rounded-2xl md:p-8.25 md:flex md:flex-row w-88 md:w-full p-4.25 reveal opacity-0 translate-x-50 transition-ease-in-out duration-1000"
+                <div class="mt-20 md:flex md:flex-col md:gap-30 flex flex-col gap-5 w-84 md:w-full">
+                    <div class="project-cards block justify-between gap-12 items-center bg-[#1A1A1A] rounded-2xl md:p-4 md:flex md:flex-row md:w-full p-4 reveal opacity-0 translate-x-50 transition-ease-in-out duration-1000 lg:w-full"
                         id="content">
                         <figure class="w-full h-full overflow-hidden md:w-105 md:h-68.5">
                             <img src="src/img/tic-tac-toe.png" alt="Tic Tac Toe" class="w-full h-full">
@@ -106,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-cards block justify-between gap-12 items-center bg-[#1A1A1A] rounded-2xl md:p-8.25 md:flex md:flex-row w-88 md:w-full p-4.25 reveal opacity-0 translate-x-50 transition-ease-in-out duration-1000"
+                    <div class="project-cards block justify-between gap-12 items-center bg-[#1A1A1A] rounded-2xl md:p-4 md:flex md:flex-row md:w-full p-4.25 reveal opacity-0 translate-x-50 transition-ease-in-out duration-1000"
                         id="content">
                         <figure class="w-full h-full overflow-hidden md:w-105 md:h-68.5">
                             <img src="src/img/Exclusive Ecommerce webiste pic.png" alt="Exclusive Website pic"
@@ -133,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="project-cards block justify-between gap-12 items-center bg-[#1A1A1A] rounded-2xl md:p-8.25 md:flex md:flex-row w-88 md:w-full p-4.25 reveal opacity-0 translate-x-50 transition-ease-in-out duration-1000"
+                    <div class="project-cards block justify-between gap-12 items-center bg-[#1A1A1A] rounded-2xl md:p-4 md:flex md:flex-row md:w-full p-4.25 reveal opacity-0 translate-x-50 transition-ease-in-out duration-1000"
                         id="content">
                         <figure class="w-full h-full overflow-hidden md:w-105 md:h-68.5">
                             <img src="src/img/focus-on-today.png" alt="Focus on today pic" class="w-full h-full">
@@ -163,16 +167,17 @@
             </div>
         </section>
     </div>
-    <hr class="text-[#343a40] mt-20 mb-20">
+    <hr class="text-[#343a40] mt-20 mb-20 w-full">
     <div class="container md:max-w-8xl md:mx-auto">
         <section class="about-me">
-            <div class="about-me-content max-w-7xl mx-auto md:flex md:justify-between gap-8 p-6 flex-col flex">
-                <div class="about-heading mb-5">
-                    <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light w-52 text-white">
+            <div
+                class="about-me-content max-w-7xl mx-auto flex md:mt-34 mt-7 gap-4 p-6 lg:flex-row flex-col lg:items-center md:items-center">
+                <div class="about-heading mb-5 space-y-6 flex-1 text-left md:w-160">
+                    <h2 class="md:text-[55px] text-5xl uppercase font-bebas tracking-wider font-light w-52 text-white">
                         About Me
                     </h2>
                 </div>
-                <div class="about-para md:flex md:flex-col gap-13 w-full md:gap-0 md:w-181">
+                <div class="about-para md:flex md:flex-col gap-13 w-full md:gap-0 md:w-160">
                     <h4 class="text-2xl mb-5 text-white">I am a Frontend Developer based in india. Has Information
                         Technology
                         Background</h4>
@@ -183,7 +188,6 @@
                         about solving problems. Currently, I’m exploring Reactjs, Webflow and a bit of Designing. While
                         I am not programming, I enjoy playing Singing, acting etc. Learning more
                         to improve skill.</p>
-
                     <a href="about.html"
                         class="text-black font-medium w-40.5 uppercase bg-[#D3E97A] p-2 flex justify-center items-center rounded-full mt-8">More
                         About
@@ -193,14 +197,15 @@
         </section>
     </div>
 
-    <hr class="text-[#343a40] mt-20 mb-20">
+    <hr class="text-[#343a40] mt-20 mb-20 w-full">
 
     <div class="container md:max-w-8xl md:mx-auto" id="contactme">
         <section class="contact-form">
             <div
-                class="form-content max-w-7xl mx-auto md:flex flex-col p-6 text-white md:gap-8 md:justify-between gap-9">
+                class="form-content max-w-7xl mx-auto md:flex lg:flex-row flex-col md:mt-34 mt-7 flex gap-4 md:justify-between p-6 text-left md:items-start lg:items-center lg:gap-40 md:gap-40">
                 <div class="about-heading flex gap-10 flex-col">
-                    <h2 class="md:text-6xl text-5xl uppercase font-bebas tracking-wider font-light w-80">
+                    <h2
+                        class="md:text-5xl text-5xl uppercase font-bebas tracking-wider font-light w-80 text-white sm:text-left">
                         Let's Connect
                     </h2>
                     <div class="social-link flex items-center gap-2">
@@ -214,31 +219,31 @@
                                 class="fa-brands fa-instagram text-[#D3E97A] text-2xl"></i></a>
                     </div>
                 </div>
-                <div class="main-form md:flex md:flex-col gap-13 md:mt-14">
-                    <form action="#" method="get" class="md:w-full w-full">
-                        <div class="contactFields flex flex-col mb-6 gap-2 w-full">
+                <div class="main-form mt-14 w-full lg:mt-0">
+                    <form action="#" method="get" class="w-full text-white">
+                        <div class="contactFields flex flex-col mb-6 gap-2">
                             <label for="fullname" class="text-gray-200 font-light">Full Name</label>
                             <input type="text" placeholder="john Doe" name="fullname" id="fullname"
-                                class="bg-[#1A1A1A] p-3 outline-0 rounded-l-lg" required>
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-lg placeholder:text-gray-600" required>
                         </div>
 
                         <div class="contactFields flex flex-col mb-6 gap-2">
                             <label for="email" class="text-gray-200 font-light">Email</label>
                             <input type="email" placeholder="example@gmail.com" name="email" id="email"
-                                class="bg-[#1A1A1A] p-3 outline-0 rounded-l-lg" required>
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-lg placeholder:text-gray-600" required>
                         </div>
 
                         <div class="contactFields flex flex-col mb-6 gap-2">
                             <label for="subject" class="text-gray-200 font-light">Subject</label>
                             <input type="text" placeholder="Message Subject" name="subject" id="subject"
-                                class="bg-[#1A1A1A] p-3 outline-0 rounded-lg" required>
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-lg placeholder:text-gray-600" required>
                         </div>
 
                         <div class="contactFields flex flex-col mb-6 gap-2">
                             <label for="message" class="text-gray-200 font-light">Message</label>
                             <textarea name="message" id="message" cols="30" rows="10"
-                                class="bg-[#1A1A1A] p-3 outline-0 rounded-l-lg" placeholder="Type here your Message..."
-                                required></textarea>
+                                class="bg-[#1A1A1A] p-3 outline-0 rounded-l-lg placeholder:text-gray-600"
+                                placeholder="Type here your Message..." required></textarea>
                         </div>
 
                         <button type="submit"
@@ -249,7 +254,7 @@
         </section>
     </div>
 
-    <div class="footer-developer-sign flex justify-center items-center md:mt-1 mt-10">
+    <div class="footer-developer-sign flex justify-center items-center md:mt-1 mt-10 w-full">
         <p class="text-gray-800 text-sm">@ 2026 Bhavesh Suthar</p>
     </div>
     <script src="./src/script.js"></script>
